--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Courier New";
-  background: linear-gradient(89deg, #a03709 0%, #04C8DE 100%);
+  background: linear-gradient(89deg, #09a036 0%, #402396 100%);
 }
 
 button{
